added class reveal to div 169

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     A SEAMLESS ONLINE EXPERIENCE.<br>
                 </h1>
                </div>
-                   <div id="intrig" >
+                   <div id="intrig" class="reveal" >
                       <div class="intcntnr"></div>
                       <div class="intcntnr"></div>
                       <div class="intcntnr"></div>
